[gd_scene load_steps=31 format=2]

[ext_resource path="res://Script/xp.gd" type="Script" id=1]
[ext_resource path="res://Sprite/gdb-coinsgemsetc-1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=26]
radius = 66.0076

[sub_resource type="CircleShape2D" id=29]
radius = 8.0

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 5.5, 7 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 176, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 208, 210, 16, 15 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 176, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 208, 240, 16, 15 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 176, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 208, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 225, 16, 15 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 225, 16, 15 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 225, 16, 15 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 176, 225, 16, 15 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 225, 16, 15 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 208, 225, 16, 15 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "orange",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[node name="xp" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="xp" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="xp"]
light_mask = 2
shape = SubResource( 26 )

[node name="delete" type="Area2D" parent="."]

[node name="delete" type="CollisionShape2D" parent="delete"]
position = Vector2( 0, 1 )
shape = SubResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -0.5, 1 )
shape = SubResource( 28 )
disabled = true

[node name="sprite_xp" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "orange"
frame = 1
playing = true

[connection signal="body_entered" from="xp" to="." method="_on_xp_body_entered"]
[connection signal="body_entered" from="delete" to="." method="_on_delete_body_entered"]
